# STL10-labeled-cnn

./: .gitignore  custom_tests.ipynb  dataset.py  model.py  optuna_tune.py  pyproject.toml  training.ipynb  utils.py
logs/: study_results-nv-a40.csv  study_results20260614-092217.csv
