[project]
name = "cnn-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchmetrics>=1.0.3",
    "torchvision>=0.27.0",
]
[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
priority = "supplemental"

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
triton-rocm = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" } # Mapujesz tylko ekosystem torch
